SE agrega un h1 al index

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
         <title>Pagina de prueba</title>
     </head>
     <body>
+        <h1>Se agrega un titulo h1</h1>
         <p>Se agrego un párrafo</p>
     </body>
 </html>
