--- a/index.html
+++ b/index.html
@@ -5,5 +5,6 @@
     <body>
         <h1>Se agrega un titulo h1</h1>
         <p>Se agrego un párrafo</p>
+        Se agrega nueva información, etc
     </body>
 </html>
